Add sample quantile to statistics.
Refs #118831