@@ -6,7 +6,7 @@ import static org.junit.Assert.assertSame;
 import static org.junit.Assert.assertThrows;
 import static org.junit.Assert.assertTrue;
 
-import java.util.Arrays;
+import java.util.List;
 
 import org.apache.commons.lang3.tuple.Pair;
 import org.junit.Before;
@@ -25,7 +25,7 @@ import wres.statistics.generated.DoubleScoreStatistic.DoubleScoreStatisticCompon
 
 /**
  * Tests the {@link RootMeanSquareError}.
- * 
+ *
  * @author James Brown
  */
 public final class RootMeanSquareErrorTest
@@ -64,11 +64,11 @@ public final class RootMeanSquareErrorTest
                                                                                .build();
 
         DoubleScoreStatistic expected = DoubleScoreStatistic.newBuilder()
-                                                         .setMetric( RootMeanSquareError.BASIC_METRIC )
-                                                         .addStatistics( component )
-                                                         .build();
+                                                            .setMetric( RootMeanSquareError.BASIC_METRIC )
+                                                            .addStatistics( component )
+                                                            .build();
 
-        assertEquals( expected, actual.getData() );
+        assertEquals( expected, actual.getStatistic() );
     }
 
     @Test
@@ -76,11 +76,11 @@ public final class RootMeanSquareErrorTest
     {
         // Generate empty data
         Pool<Pair<Double, Double>> input =
-                Pool.of( Arrays.asList(), PoolMetadata.of() );
+                Pool.of( List.of(), PoolMetadata.of() );
 
         DoubleScoreStatisticOuter actual = rmse.apply( input );
 
-        assertEquals( Double.NaN, actual.getComponent( MetricConstants.MAIN ).getData().getValue(), 0.0 );
+        assertEquals( Double.NaN, actual.getComponent( MetricConstants.MAIN ).getStatistic().getValue(), 0.0 );
     }
 
     @Test
@@ -123,7 +123,7 @@ public final class RootMeanSquareErrorTest
     public void testExceptionOnNullInput()
     {
         PoolException actual = assertThrows( PoolException.class,
-                                                   () -> this.rmse.apply( null ) );
+                                             () -> this.rmse.apply( null ) );
 
         assertEquals( "Specify non-null input to the '" + this.rmse.getMetricNameString() + "'.", actual.getMessage() );
     }
